--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>test</title>
 </head>
 <body>
-    <button class="btn">Hello</button>
+    <button id="btn">Hello</button>
 </body>
 </html>
